# NBA_data_Analyst_agent

./: .bedrock_agentcore.yaml  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
app/nba_data_analyst_agent/: main.py
data/: nba_dataset.json
frontend/: package-lock.json
scripts/: deploy.py  generate_dataset.py  invoke.py
spec/: architecture.md  infrastructure.md  requirements.md
spec/adr/: agentcore-deployment.md  analysis-agent.md  data-agent.md  data-source-mode.md  dev-environment-setup.md  nba-api-tools.md  observability.md  orchestrator-agent.md
spec/features/: dev-environment-setup.md  orchestrator-agent.md
src/: cli.py  tracer.py
src/agents/: analysis_agent.py  data_agent.py  orchestrator.py
src/tools/: nba_tools.py  nba_tools_dataset.py  nba_tools_nba_api.py
terraform/: backend.tf  budgets.tf  iam.tf  memory.tf  provider.tf
