[project]
name = "nba-data-analyst-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.14.0",
    "bedrock-agentcore-starter-toolkit>=0.3.9",
    "boto3>=1.43.25",
    "nba-api>=1.11.4",
    "strands-agents>=1.42.0",
]
